Fix select2 style on ios

--- a/less/select2-bootstrap-theme/select2-bootstrap-theme-core.less
+++ b/less/select2-bootstrap-theme/select2-bootstrap-theme-core.less
@@ -12,6 +12,7 @@ select {
 
 .select2-container--default {
     .select2-selection {
+        position: relative;
         font-weight: @btn-font-weight;
         border: none;
         border-bottom: 1px solid @input-border;
@@ -34,7 +35,7 @@ select {
             font-size: @font-size-base;
             line-height: normal;
             padding: 0;
-            display: inline;
+            display: inline-block;
             vertical-align: bottom;
             background-color: @input-bg;
             background-image: none;
@@ -51,9 +52,9 @@ select {
         }
 
         .select2-selection__clear {
-            position: relative;
-            top: 4px;
-            right: -4px;
+            position: absolute;
+            //top: 4px;
+            right: 22px;
         }
 
         .select2-selection__arrow {
